# raylib-tutorial

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
chapters/01-cpp-basics/: CMakeLists.txt  README.md  main.cpp
chapters/02-cmake-intro/: CMakeLists.txt  README.md  main.cpp  math_utils.cpp  math_utils.h
chapters/03-raylib-basics/: CMakeLists.txt  README.md  main.cpp
chapters/04-game-loop/: CMakeLists.txt  README.md  main.cpp
chapters/05-collision/: CMakeLists.txt  README.md  main.cpp
chapters/06-game-states/: CMakeLists.txt  README.md  main.cpp
chapters/07-raygui-basics/: CMakeLists.txt  README.md  main.cpp
chapters/08-raygui-advanced/: CMakeLists.txt  README.md  main.cpp
docs/: BUILD.md  GUIDE.md  JANET.md  SUMMARY.md
games/brick-breaker/: CMakeLists.txt  README.md  main.cpp
games/fps/: CMakeLists.txt  README.md  main.cpp
games/git-fighter/: CMakeLists.txt  DESIGN.md
games/git-fighter/levels/: level_01_gui.cpp  level_01_gui.h  level_01_init.cpp  level_01_init.h  level_01_realgit.cpp  level_01_realgit.h  level_01_visual.cpp  level_02_branch.cpp  level_02_branch.h  level_03_merge.cpp  level_03_merge.h  level_04_remote.cpp  level_04_remote.h
games/git-fighter/src/: demo_graph.cpp  demo_split_view.cpp  game.cpp  game.h  git_console.cpp  git_console.h  git_graph.cpp  git_graph.h  git_visualization.cpp  git_visualization.h  git_visualization_panels.cpp  git_wrapper.cpp  git_wrapper.h  gui_manager.cpp  gui_manager.h  level_font.cpp  level_manager.cpp  level_manager.h  main.cpp  ui_manager.cpp  ui_manager.h  ui_theme.cpp  ui_theme.h  visualizer.cpp  visualizer.h
games/snake/: CMakeLists.txt  README.md  ROADMAP.md  main.cpp
games/snake/phases/: README.md
games/snake/phases/v1-items/: CMakeLists.txt  README.md  game.cpp  game.h  item.h  obstacle.cpp  snake.cpp
games/snake/phases/v2-fx/: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp  particle.cpp  particle.h  screenshake.cpp  screenshake.h
games/snake/phases/v3-audio/: CMakeLists.txt  README.md  audio_system.h  game.cpp  game.cpp.bak  game.h  highscore.h  main.cpp  obstacle.h  screenshake.cpp  snake.h
games/snake/phases/v4-multi/: CMakeLists.txt  README.md  audio_system.cpp  game.cpp  game.h  highscore.cpp  item.cpp  level.cpp  level.h  obstacle.cpp  obstacle.h  particle.cpp  particle.h  screenshake.h  settings.cpp  settings.h  snake.cpp  snake.h
games/tank-battle/: CMakeLists.txt  README.md  main.cpp
games/tetris/: CMakeLists.txt  README.md  main.cpp
games/tower-defense/: CMakeLists.txt  README.md  main.cpp
janet/: CMakeLists.txt  raylib_janet.cpp  workflow.janet
janet/emacs/: ajsc.el
janet/examples/: netrepl-client.janet  netrepl-host.janet  netrepl-set-red.janet  netrepl-smoke-client.janet  repl-demo.janet  smoke.janet  workflow-smoke.janet
